@@ -335,7 +335,7 @@ class PersistenceServiceTest {
         Page<RoleAssignmentEntity> page = new PageImpl<>(tasks);
 
 
-        List<String> actorId = Arrays.asList(
+        List<String> actorId = List.of(
             "123e4567-e89b-42d3-a456-556642445678",
             "4dc7dd3c-3fb5-4611-bbde-5101a97681e1"
         );
